# controllers/score.go
@@ -22,16 +22,28 @@ type QuestionSub struct {
 	Score  float64 `json:"score"`
 }
 
+type ScoreResp struct {
+	ScoreId int    `json:"score_id"`
+	Score   string `json:"score"`
+}
+
+type ResponseScore struct {
+	Data    ScoreResp `json:"data"`
+	Message string    `json:"message"`
+	Status  string    `json:"status"`
+}
+
 // @Summary      User Puan Kısmı
 // @Description  Karbon Ayak İzi Hesaplanması
 // @Tags         Score
 // @Accept       json
 // @Produce      json
 // @Param        ScoreInfo body ScoreInfo true "/company-questions ve /person-questions endpointlerinde belli bir key value değerleri bulunamktadır. Bu değerleri kullanarak question_name ve question_key değerleri eklenir."
-// @Success      200 {object} Response "data kısmında kullanıcının karbon ayak izi değeri döner.Chat kısmında bu kısmı kullanacaksın."
+// @Success      200 {object} ResponseScore "data kısmında kullanıcının karbon ayak izi değeri döner.Chat kısmında bu kısmı kullanacaksın."
 // @Failure      400 {object} Response "Invalid request"
 // @Router       /score [post]
 func Score(c *gin.Context) {
+	fmt.Println("girdiii")
 	db := model.GetDB()
 	var scoreInf []ScoreInfo
 	if err := c.ShouldBindJSON(&scoreInf); err != nil {
@@ -74,10 +86,30 @@ func Score(c *gin.Context) {
 	// 	})
 	// 	return
 	// }
+
+	//toplam skorun eklenmesi
 	totalScore := 0.0
 	for _, info := range scoreInf {
-		score := &model.UserDetailScore{}
-		score.UserId = int(userId)
+		for _, sub := range info.QuestionSub {
+			totalScore += sub.Score
+		}
+	}
+	totalScore = math.Round((totalScore/1000.0)*10) / 10
+	userScore := model.UserScore{}
+	userScore.Score = totalScore
+	userScore.UserId = int(userId)
+	if err := db.Save(&userScore).Error; err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"status":  "error",
+			"message": "Bir hata oluştu.",
+		})
+		return
+	}
+	fmt.Println("başarıyla eklendi")
+	for _, info := range scoreInf {
+		detailScore := &model.UserDetailScore{}
+		detailScore.UserId = int(userId)
+		detailScore.UserScoreId = userScore.Id
 		question := model.QuestionTypes{}
 		if info.QuestionName == "" {
 			c.JSON(http.StatusBadRequest, gin.H{
@@ -110,8 +142,8 @@ func Score(c *gin.Context) {
 			return
 		}
 
-		score.QuestionTypesId = question.Id
-		if err := db.Save(&score).Error; err != nil {
+		detailScore.QuestionTypesId = question.Id
+		if err := db.Save(&detailScore).Error; err != nil {
 			c.JSON(http.StatusBadRequest, gin.H{
 				"status":  "error",
 				"message": "Bir hata oluştu.",
@@ -120,7 +152,7 @@ func Score(c *gin.Context) {
 		}
 
 		//alt başlıkların eklenmesi
-		err := subSccore(info.QuestionSub, score)
+		err := subSccore(info.QuestionSub, detailScore)
 		if err != nil {
 			c.JSON(http.StatusBadRequest, gin.H{
 				"status":  "error",
@@ -128,23 +160,15 @@ func Score(c *gin.Context) {
 			})
 			return
 		}
-		totalScore += score.TotalScore
-	}
-	totalScore = math.Round((totalScore/1000.0)*10) / 10
-	userScore := model.UserScore{}
-	userScore.Score = totalScore
-	userScore.UserId = int(userId)
-	if err := db.Save(&userScore).Error; err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"status":  "error",
-			"message": "Bir hata oluştu.",
-		})
-		return
+		// totalScore += detailScore.TotalScore
 	}
 	c.JSON(http.StatusOK, gin.H{
 		"status":  "success",
 		"message": "Sonuçlar başarılı bir şekilde eklenmiştir.",
-		"data":    strconv.FormatFloat(totalScore, 'f', 1, 64),
+		"data": ScoreResp{
+			ScoreId: userScore.Id,
+			Score:   strconv.FormatFloat(totalScore, 'f', 1, 64),
+		},
 	})
 }
 
@@ -164,7 +188,6 @@ func subSccore(subTypes []QuestionSub, userScore *model.UserDetailScore) error {
 		questionSub.QuestionSubheadId = subIds[0]
 		questionSub.UserDetailScoreId = userScore.Id
 		questionSub.Score = sub.Score
-
 		if err := db.Save(&questionSub).Error; err != nil {
 			return errors.New("Bir hata oluştu")
 		}
@@ -180,6 +203,7 @@ func subSccore(subTypes []QuestionSub, userScore *model.UserDetailScore) error {
 }
 
 type DetailScore struct {
+	Id              int     `json:"questionSub_Id"`
 	QuestionType    string  `json:"questionType"`
 	QuestionSubType string  `json:"questionSubType"`
 	SubScore        float64 `json:"subScore"`
@@ -193,11 +217,22 @@ type DetailResp struct {
 // @Tags         Score
 // @Accept       json
 // @Produce      json
+// @Param         score_id query string true "skor id değeri girilir."
 // @Success      200 {object} DetailResp "Kullanıcıya ait soru alt başlıklarına göre questiontype:temel soru başlığını ,QuestionSubType : alt soru başlığını ve SubScore ise alt başlığa ait değeri içerir.Bu kısımlar chat kısmı için kullanılır."
 // @Router       /detail-score [get]
 func GetSubDetailScore(c *gin.Context) {
 	user := model.User{}
 	db := model.GetDB()
+	scoreId := c.Query("score_id")
+	score := model.UserScore{}
+	if scoreId == "" {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"status":  "error",
+			"message": "Skor id boş bırakılamaz.",
+		})
+		return
+	}
+
 	if err := db.Where("id=?", Claims["userId"]).First(&user).Error; err != nil && err != gorm.ErrRecordNotFound {
 		c.JSON(http.StatusBadRequest, gin.H{
 			"status":  "error",
@@ -205,8 +240,22 @@ func GetSubDetailScore(c *gin.Context) {
 		})
 		return
 	}
+	if err := db.Where("id=? and user_id=?", scoreId, user.Id).First(&score).Error; err != nil && err != gorm.ErrRecordNotFound {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"status":  "error",
+			"message": "Bir hata oluştu",
+		})
+		return
+	}
+	if score.Id == 0 {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"status":  "error",
+			"message": "Skor bulunamadı.",
+		})
+		return
+	}
 	var userIds []int
-	if err := db.Table("user_detail_score").Where("user_id=?", user.Id).Pluck("id", &userIds).Error; err != nil && err != gorm.ErrRecordNotFound {
+	if err := db.Table("user_detail_score").Where("user_id=? and user_score_id=?", user.Id, score.Id).Pluck("id", &userIds).Error; err != nil && err != gorm.ErrRecordNotFound {
 		c.JSON(http.StatusBadRequest, gin.H{
 			"status":  "error",
 			"message": "Bir hata oluştu",
@@ -226,6 +275,7 @@ func GetSubDetailScore(c *gin.Context) {
 	var allScores []DetailScore
 	for _, item := range subScores {
 		score := DetailScore{
+			Id:              item.Id,
 			QuestionType:    item.QuestionSubhead.QuestionTypes.QuestionKey,
 			QuestionSubType: item.QuestionSubhead.QuestionKey,
 			SubScore:        item.Score,
@@ -238,7 +288,8 @@ func GetSubDetailScore(c *gin.Context) {
 	})
 }
 
-type AllScores struct {
+type Scores struct {
+	ScoreId   int     `json:"score_id"`
 	Score     float64 `json:"score"`
 	ScoreDate string  `json:"score_date"`
 }
@@ -246,6 +297,10 @@ type AllScores struct {
 type DataScore struct {
 	Data   []AllScores `json:"data"`
 	Status string      `json:"status"`
+}
+type AllScores struct {
+	Scores    []Scores `json:"scores"`
+	LastScore Scores   `json:"last-score"`
 }
 
 // @Summary      Kullanıcı skor bilgileri
@@ -273,10 +328,18 @@ func GetAllScores(c *gin.Context) {
 		})
 		return
 	}
-	allScores := []AllScores{}
+	allScores := []Scores{}
+	id := 0
+	var lastScore Scores
 
 	for _, score := range scores {
-		allScores = append(allScores, AllScores{
+		if score.Id > id {
+			lastScore.ScoreId = score.Id
+			lastScore.Score = score.Score
+			lastScore.ScoreDate = score.CreatedAt.Format("02-01-2006")
+		}
+		allScores = append(allScores, Scores{
+			ScoreId:   score.Id,
 			Score:     score.Score,
 			ScoreDate: score.CreatedAt.Format("02-01-2006"),
 		})
@@ -284,6 +347,38 @@ func GetAllScores(c *gin.Context) {
 
 	c.JSON(http.StatusOK, gin.H{
 		"status": "success",
-		"data":   allScores,
+		"data": AllScores{
+			Scores:    allScores,
+			LastScore: lastScore,
+		},
+	})
+}
+
+// func RankScore(c *gin.Context) {
+// 	db := model.GetDB()
+// 	var lowestScores []model.UserScore
+// 	db.Order("score ASC").Limit(4).Find(&lowestScores)
+// 	userId := Claims["userId"]
+
+// }
+
+func CompTest(c *gin.Context) {
+	var scoreInf []ScoreInfo
+	if err := c.ShouldBindJSON(&scoreInf); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"status":  "error",
+			"message": "Bir hata oluştu",
+		})
+		return
+	}
+	totalScore := 0.0
+	for _, info := range scoreInf {
+		for _, sub := range info.QuestionSub {
+			totalScore += sub.Score
+		}
+	}
+	totalScore = math.Round((totalScore/1000.0)*10) / 10
+	c.JSON(http.StatusOK, gin.H{
+		"total": totalScore,
 	})
 }
